feat: Detect sources in sub-queries in planner